re-add height to body... fixes smooth scrolling and background img on mobile but breaks javascript onscroll?

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,6 +4,7 @@
 
 body {
   margin: 0;
+  height: 100vh;
   background-image: url(../img/min/light2.jpg);
   background-position: center;
   background-size: cover;
